Revision history for Perl extension Net::Google::GData

0.19    Mon Jul 07 12:27:00 2010

        - make 'lazy_build' the content property of Role::HasContent 

0.18    Sun May 16 10:08:00 2010

        - coerce OAuth callback url from Str (thanks to notbenh)

0.17    Sat Mar 15 22:51:00 2010

        - depends on Mouse 0.51

0.16    Sat Jan 16 18:05:00 2010

        - depends on Net::Google::AuthSub 0.5

0.15    Sat Jan 16 11:12:30 2010

        - entry_has accepts coderef default

0.14    Fri Jan 15 10:23:30 2010

        - Force 'uncuddled_auth' on Net::Google::AuthSub _compat params

0.13    Tue Jan 05 12:40:00 2010

        - entry_class of feedurl doesn't need to do 'Entry' role
        - DataAPI makes entry class name accessor with feedurl method

0.12    Mon Jan 04 04:21:00 2010

        - new Net::Google::DataAPI::Auth::ClientLogin::Multiple
        - new prepare_request method

0.11    Thu Dec 31 18:30:00 2009

        - refactored internals
        - POD update
        - You can pass Net::Google::AuthSub to Net::Google::DataAPI::Role::Service directly

0.10    Mon Dec 21 11:13:30 2009

        - fix broken tests

0.09    Fri Dec 18 19:33:50 2009

        - $XML::Atom::ForceUnicode = 1
        - move XML::Atom variables to Net::Google::DataAPI::Role::Service

0.08    Fri Dec 18 18:41:45 2009

        - fix dependency error for Moose
        - fix Changes (it's Friday today)

0.07    Fri Dec 18 13:25:50 2009

        - now uses Any::Moose
        - OAuth support with Net::Google::DataAPI::Auth::OAuth
        - Net::Google::DataAPI::Role::Service stops using MooseX::Role::Parameterized
        - multipart request support
        - less strict role check for feedurl
        - support for existing query form for request

0.06    Thu Oct 15 13:44:10 2009

        - change arguments for from_atom callback of feedurl to ($self, $atom)

0.05    Thu Oct 15 12:14:51 2009

        - new gdata_version parameter for Net::Google::DataAPI::Role::Service
